--- a/MakonFM/root/static/manual.html
+++ b/MakonFM/root/static/manual.html
@@ -21,6 +21,12 @@
 
 		<li><a href="#jak_za____t">Jak začít</a></li>
 		<li><a href="#z__sady_pro_p__epis">Zásady pro přepis</a></li>
+		<ul>
+
+			<li><a href="#zadrhnut__">Zadrhnutí</a></li>
+			<li><a href="#ciz___slova">Cizí slova</a></li>
+		</ul>
+
 		<li><a href="#ovl__d__n__">Ovládání</a></li>
 	</ul>
 
@@ -59,20 +65,28 @@ ujistíte, že přepis opravdu přesně odpovídá vyslovenému projevu.</p>
 nebo vzad pomocí tlačítek plus a minus vlevo nahoře. Analogicky lze posouvat
 koncem označeného úseku tlačítky vpravo nahoře. Po posunutí doporučuji pro
 kontrolu opět přehrát označený úsek.</p>
+<p>Doporučuji netrávit na jednom kousku mnoho času: Pokud je špatně rozumět, nebo
+úprava není systémem přijata, je lépe pasáž přeskočit. I odmítnuté úpravy jsou
+uloženy a mohou být zpětně obnoveny.</p>
+<p>
+</p>
+<h3><a name="zadrhnut__">Zadrhnutí</a></h3>
 <p>Pokud K.M. vysloví část slova a nedořekne je (zadrhne se), pak prosím přepište
 toto nedovyslovené slovo, jak ho vyslovil, a připojte k němu pomlčku (bez
 mezery). Např.:</p>
 <pre>
   Tam je každou chvíli něco správ- něco jiného správné.
-  viz <a href="http://www.makon.fm/#85-05A#72.25">http://www.makon.fm/#85-05A#72.25</a></pre>
+  viz <a href="http://www.makon.fm/#85-05A#72.25" target="_blank">http://www.makon.fm/#85-05A#72.25</a></pre>
 <p>Pokud K.M. přeruší tok mluvy po vyslovení celého slova (popř. nějaké slovo
 zopakuje), přidejte za toto slovo tři tečky. Např.:</p>
 <pre>
   Rozumíte, tak to v tom případě vypadá... v té přírodě vypadá.
-  viz <a href="http://www.makon.fm/#85-05A#67.94">http://www.makon.fm/#85-05A#67.94</a></pre>
-<p>Doporučuji netrávit na jednom kousku mnoho času: Pokud je špatně rozumět, nebo
-úprava není systémem přijata, je lépe pasáž přeskočit. I odmítnuté úpravy jsou
-uloženy a mohou být zpětně obnoveny.</p>
+  viz <a href="http://www.makon.fm/#85-05A#67.94" target="_blank">http://www.makon.fm/#85-05A#67.94</a></pre>
+<p>
+</p>
+<h3><a name="ciz___slova">Cizí slova</a></h3>
+<p>Slova s nečeskou výslovností přepisujeme foneticky. Tedy ne <em>Schwarz</em>,
+ale <em>Švarc</em>.</p>
 <p>
 </p>
 <h2><a name="ovl__d__n__">Ovládání</a></h2>
