updated manual to cover autostop

--- a/MakonFM/root/static/manual.html
+++ b/MakonFM/root/static/manual.html
@@ -20,6 +20,20 @@
 	<ul>
 
 		<li><a href="#jak_za____t">Jak začít</a></li>
+		<ul>
+
+			<li><a href="#v__b__r_nahr__vky">Výběr nahrávky</a></li>
+			<li><a href="#jm__no_p__episuj__c__ho">Jméno přepisujícího</a></li>
+			<li><a href="#autostop">Autostop</a></li>
+		</ul>
+
+		<li><a href="#metody_p__episov__n__">Metody přepisování</a></li>
+		<ul>
+
+			<li><a href="#zapnut___autostop">Zapnutý autostop</a></li>
+			<li><a href="#vypnut___autostop">Vypnutý autostop</a></li>
+		</ul>
+
 		<li><a href="#z__sady_pro_p__epis">Zásady pro přepis</a></li>
 		<ul>
 
@@ -43,9 +57,14 @@
 <p>
 </p>
 <h2><a name="jak_za____t">Jak začít</a></h2>
-<p>Přepisovací nástroj se nachází na adrese <a href="http://www.makon.fm/">http://www.makon.fm/</a> .</p>
-<p>V levé části se nachází strukturovaný seznam nahrávek. Kliknutím na kategorii se
-zobrazí její položky. Kliknutím na jméno nahrávky se tato začne přehrávat. Než
+<p>Přepisovací nástroj se nachází na adrese <a target="_blank" href="http://www.makon.fm/">http://www.makon.fm/</a> .</p>
+<p>V levé části se nachází strukturovaný hlavní menu.</p>
+<p>
+</p>
+<h3><a name="v__b__r_nahr__vky">Výběr nahrávky</a></h3>
+<p>První položkou je seznam nahrávek.  
+Kliknutím se vždy seznam rozbalí, až se dostanete ke konkrétní nahrávce.
+Kliknutím na jméno nahrávky se tato začne přehrávat. Než
 se rozeznějí Makoňova slova, může to chvíli trvat podle toho, jak rychlé je vaše
 připojení k internetu a jak dlouhá je pauza na začátku.</p>
 <p>Pokud se přehrávat nezačne, zkontrolujte, zda přehrávač v pravé části zobrazuje
@@ -56,9 +75,45 @@ jedná o nahrávku, pro niž přepis zatím nebyl vygenerován. Vyberte prosím 
 takovém případě jinou.</p>
 <p>
 </p>
+<h3><a name="jm__no_p__episuj__c__ho">Jméno přepisujícího</a></h3>
+<p>Druhou položkou menu je políčko pro jméno přepisujícího.
+Vyplňte prosím svoje jméno -- nemusí se jednat o Vaše občanské jméno. Účelem je
+pouze to, aby bylo možné identifikovat, které příspěvky jsou od koho. Je proto
+žádoucí, abyste jméno vyplnili pokaždé stejně.</p>
+<p>
+</p>
+<h3><a name="autostop">Autostop</a></h3>
+<p>Třetí položkou menu je vypínač automatického zastavování. O této funkci pojednává
+následující sekce.</p>
+<p>
+</p>
+<h2><a name="metody_p__episov__n__">Metody přepisování</a></h2>
+<p>Systém umožňuje automatický a manuální výběr úseků pro přepis. Automatický výběr
+je ve výchozím nastavení zapnutý. Vypnout se dá pomocí zaškrtnutí políčka
+&quot;vypnout autostop&quot; v menu.</p>
+<p>
+</p>
+<h3><a name="zapnut___autostop">Zapnutý autostop</a></h3>
+<p>Při zapnuté funkci autostop stačí, když si nahrávku pustíte a posloucháte. Až se
+přehrávání dostane k úseku, který počítač vyhodnotí jako vhodný pro přepis,
+přehrávání se zastaví, vybraný úsek se označí a jednou přehraje.</p>
+<p>Opakovaně přehrát lze označený úsek pomocí tlačítka <em>přehrát</em> nebo klávesovou
+zkratkou <code>ctrl+mezera</code>.</p>
+<p>Po vepsání správného přepisu a uložení znovu zapněte přehrávání.</p>
+<p><strong>!Důležité!</strong> Pokud je označený úsek byť zčásti nesrozumitelný, nepřepisujte
+jej, nýbrž opusťte přepisovací mód pomocí klávesy <code>esc</code> nebo pomocí kliknutí na
+křížek vpravo nahoře.</p>
+<p>
+</p>
+<h3><a name="vypnut___autostop">Vypnutý autostop</a></h3>
+<p>Při vypnuté funkci autostopje potřeba myší označit úsek, který se má přepsat.
+Přístupy se dají libovolně kombinovat, to jest manuálně zastavit a označit úsek
+pro přepis i při zapnuté funkci autostop.</p>
+<p>
+</p>
 <h2><a name="z__sady_pro_p__epis">Zásady pro přepis</a></h2>
 <p>Přepisujeme jen srozumitelné úseky a zásadně pouze úseky, kde hovoří Karel
-Makoň. Jiné mluvčí prosím nepřepisujte!</p>
+Makoň. Jiné mluvčí a nesrozumitelné úseky prosím nepřepisujte!</p>
 <p>Prosím, přepsaný úsek uložte až po pečlivé kontrole, kdy se
 ujistíte, že přepis opravdu přesně odpovídá vyslovenému projevu.</p>
 <p>V případě, že označený úsek začíná uprostřed slova, lze začátek posunout vpřed
@@ -76,17 +131,23 @@ toto nedovyslovené slovo, jak ho vyslovil, a připojte k němu pomlčku (bez
 mezery). Např.:</p>
 <pre>
   Tam je každou chvíli něco správ- něco jiného správné.
-  viz <a href="http://www.makon.fm/#85-05A#72.25" target="_blank">http://www.makon.fm/#85-05A#72.25</a></pre>
+  viz <a target="_blank" href="http://www.makon.fm/#85-05A#72.25">http://www.makon.fm/#85-05A#72.25</a></pre>
 <p>Pokud K.M. přeruší tok mluvy po vyslovení celého slova (popř. nějaké slovo
 zopakuje), přidejte za toto slovo tři tečky. Např.:</p>
 <pre>
   Rozumíte, tak to v tom případě vypadá... v té přírodě vypadá.
-  viz <a href="http://www.makon.fm/#85-05A#67.94" target="_blank">http://www.makon.fm/#85-05A#67.94</a></pre>
+  viz <a target="_blank" href="http://www.makon.fm/#85-05A#67.94">http://www.makon.fm/#85-05A#67.94</a></pre>
 <p>
 </p>
 <h3><a name="ciz___slova">Cizí slova</a></h3>
 <p>Slova s nečeskou výslovností přepisujeme foneticky. Tedy ne <em>Schwarz</em>,
 ale <em>Švarc</em>.</p>
+<p>Je možné pak takovému slovu opravit grafickou podobu: Až se oprava uloží a
+zobrazí se tučně v přepisu, se kliknutím na inkriminované slovo (Švarc) pod
+přepisem zobrazí informace o slovu. Mohu pak změnit výskyt na <em>Schwarz</em>.</p>
+<p>Rozdíl mezi slovním tvarem a výskytem je v tom, že slovní tvar je vždy malými
+písmeny a je oproštěn od interpunkce. Pomocí tečky na konci výskytu slova a
+velkého písmene ve výskytu následujícího slova se označují hranice vět.</p>
 <p>
 </p>
 <h2><a name="ovl__d__n__">Ovládání</a></h2>
